fix: Remove extra spacing above `.Layout__footer`

--- a/src/scss/ContactBubble.scss
+++ b/src/scss/ContactBubble.scss
@@ -24,10 +24,6 @@
 	.ContactBubble__wrapper[data-show='true'] {
 	}
 
-	.Layout__nav {
-		min-height: 2000px;
-	}
-
 	.ContactBubble__openbtn {
 		position: absolute;
 		z-index: 1;
